zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__pointer__tests__fullscreen_selection_copied.snap
---
source: zeta-code/tui/src/app/fullscreen/pointer_tests.rs
expression: text
---
  ≡ .                                                       
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                               Copied 7 chars to clipboard  
  ╭──────────────────────────────────────────────────────╮  
  │ > copy me                                            │  
  ╰──────────────────────────────────── Automatic model ─╯  
                                                            
  Enter send  ·  shift+tab permissions  ·  /home
