zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__pointer__tests__fullscreen_selection_copy_failed.snap
---
source: zeta-code/tui/src/app/fullscreen/pointer_tests.rs
expression: text
---
  ≡ .               [+]                [— / —] [Dashboard]  
                                                            
● clipboard unavailable                                     
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
  ⏸ ask permissions on                                      
  ╭──────────────────────────────────────────────────────╮  
  │ > copy me                                            │  
  ╰──────────────────────────────────── Automatic model ─╯  
                                                            
  Enter send  ·  shift+tab permissions  ·  /home
