zeta-code/tui/src/app/fullscreen/snapshots/app__fullscreen__pointer__tests__resized_completion_after_cancelled_selection.snap
---
source: zeta-code/tui/src/app/fullscreen/pointer_tests.rs
expression: text
---
  ≡ .               [+]    [Dashboard]  
                                        
                                        
                                        
                                        
  ────────────────────────────────────  
  /quit                      quit Zeta  
  ╭──────────────────────────────────╮  
  │ > /q                             │  
  ╰──────────────── Automatic model ─╯  
                                        
  Enter send · shift+tab permissions
